// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders bold 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "DARK_COLOR": "#2598c6",
        "GRAY_COLOR": "#A3AAB1",
        "THEME_COLOR": "#69c3e8",
      },
    }
  }
>
  <BoldText>
    <styled.div>
      <div
        className="sc-bwzfXH locxlO"
      >
        <styled.div>
          <div
            className="sc-bdVaJa eMFQSc"
          >
            Text
          </div>
        </styled.div>
      </div>
    </styled.div>
  </BoldText>
</ThemeProvider>
`;

exports[`renders colored 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "DARK_COLOR": "#2598c6",
        "GRAY_COLOR": "#A3AAB1",
        "THEME_COLOR": "#69c3e8",
      },
    }
  }
>
  <ColoredText>
    <styled.div>
      <div
        className="sc-htpNat ihLMWb"
      >
        <styled.div>
          <div
            className="sc-bdVaJa eMFQSc"
          >
            Text
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ColoredText>
</ThemeProvider>
`;

exports[`renders coloredBold 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "DARK_COLOR": "#2598c6",
        "GRAY_COLOR": "#A3AAB1",
        "THEME_COLOR": "#69c3e8",
      },
    }
  }
>
  <ColoredBoldText>
    <styled.div>
      <div
        className="sc-bwzfXH locxlO"
      >
        <styled.div>
          <div
            className="sc-htpNat ihLMWb"
          >
            <styled.div>
              <div
                className="sc-bdVaJa eMFQSc"
              >
                Text
              </div>
            </styled.div>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ColoredBoldText>
</ThemeProvider>
`;

exports[`renders simple 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "DARK_COLOR": "#2598c6",
        "GRAY_COLOR": "#A3AAB1",
        "THEME_COLOR": "#69c3e8",
      },
    }
  }
>
  <SimpleText>
    <styled.div>
      <div
        className="sc-bdVaJa eMFQSc"
      >
        Text
      </div>
    </styled.div>
  </SimpleText>
</ThemeProvider>
`;

exports[`renders underlined 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "DARK_COLOR": "#2598c6",
        "GRAY_COLOR": "#A3AAB1",
        "THEME_COLOR": "#69c3e8",
      },
    }
  }
>
  <UnderlinedText>
    <styled.div>
      <div
        className="sc-bxivhb bFxTZR"
      >
        <styled.div>
          <div
            className="sc-bdVaJa eMFQSc"
          >
            Text
          </div>
        </styled.div>
      </div>
    </styled.div>
  </UnderlinedText>
</ThemeProvider>
`;
